# omni_proof

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: security-reviewer.md
.claude/skills/release-check/: SKILL.md
.claude/skills/validate-examples/: SKILL.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  causal-methodology.md  configuration.md  examples.md  getting-started.md  index.md  rest-api.md
docs/superpowers/plans/: 2026-03-14-brand-extractor.md
docs/superpowers/specs/: 2026-03-14-brand-extractor-design.md
examples/: README.md  demo.py  playground.ipynb  playground_output.ipynb
examples/data/: brand_guidelines.json  brand_profile.json  campaign_performance.csv  compliance_samples.json  creative_metadata_samples.json
plans/: causal-multimodal-engine-blueprint.md
plans/research/: Causal Inference for Creative Performance.md  Researching Ad Creative Attribution Engine.md
plans/specs/: layer-1-ingestion.md  layer-2-storage.md  layer-3-causal-engine.md  layer-4-orchestration-rag.md  layer-5-dashboard-generative.md
src/omni_proof/: __init__.py  _cli.py
src/omni_proof/api/: app.py  deps.py  generative_loop.py
src/omni_proof/brand_extraction/: __init__.py  asset_processor.py  conflict_detector.py  extractor.py  models.py  pattern_aggregator.py
src/omni_proof/causal/: __init__.py  base.py  dag_builder.py  estimator.py  identifier.py  refuter.py  results.py
src/omni_proof/config/: __init__.py  constants.py  settings.py
src/omni_proof/core/: __init__.py  exceptions.py  interfaces.py
src/omni_proof/ingestion/: __init__.py  enums.py  gemini_client.py  pipeline.py  preprocessor.py  schemas.py
src/omni_proof/orchestration/: __init__.py  compliance_chain.py  insight_synthesizer.py  models.py
src/omni_proof/rag/: __init__.py  (+3 more)
tests/fixtures/: synthetic_ads.py
tests/integration/: test_api_e2e.py  test_api_error_e2e.py  test_api_validation_e2e.py  test_brand_compliance_e2e.py  test_brand_extraction_e2e.py  test_brand_lifecycle_e2e.py  test_causal_advanced_e2e.py  test_full_e2e_pipeline.py  test_full_pipeline.py  test_generative_loop_e2e.py  test_ingestion_storage_e2e.py  test_rag_compliance_e2e.py  test_storage_e2e.py
tests/unit/: test_api_routes.py  test_asset_processor.py  test_brand_extraction_models.py  test_brand_extractor.py  test_brand_indexer.py  test_brand_retriever.py  test_compliance_chain.py  test_conflict_detector.py  test_counterfactual_generator.py  test_dag_builder.py  test_disentangler.py  test_edge_cases.py  test_enums.py  test_estimator.py  test_gemini_client.py  test_generative_loop.py  test_insight_synthesizer.py  test_memory_store.py  test_pattern_aggregator.py  test_pipeline.py  test_preprocessor.py  test_refuter.py  test_relational_store.py  test_schemas.py  test_settings.py  test_storage_models.py  test_vector_store.py  test_visual_estimator.py
(+13 files in other folders)
