[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-proof"
version = "0.1.0"
description = "Causal-Multimodal Engine for Creative Performance Attribution"
requires-python = ">=3.11"
authors = [{name = "OmniProof Contributors"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["causal-inference", "creative-attribution", "multimodal", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dowhy>=0.11",
    "econml>=0.15",
    "pinecone>=5.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "lightgbm>=4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/navidgh66/omni_proof"
Repository = "https://github.com/navidgh66/omni_proof"
Issues = "https://github.com/navidgh66/omni_proof/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/omni_proof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
